# FluxReel

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  FEATURES.md  Makefile  PROJECT_STRUCTURE.md  PRO_FEATURES.md  PRO_IMPLEMENTATION.md  QUICKSTART.md  README.md  fluxreel_logo.ai
.github/workflows/: ci.yml
docs/: API.md
examples/: ai_generated.flux  hello_world.flux  live_stream.flux  multicam_edit.flux  tiktok_vertical.flux
examples/assets/: .gitkeep
python/: README.md  pyproject.toml  requirements.txt
python/fluxreel/: __init__.py  __main__.py  utils.py
rust/fluxreel-cli/: Cargo.toml
rust/fluxreel-cli/src/: main.rs
rust/fluxreel-core/: Cargo.toml
rust/fluxreel-core/src/: ai_assets.rs  animation.rs  audio.rs  audio_pro.rs  blend_modes.rs  color_grading.rs  effects.rs  geometry.rs  lib.rs  masking.rs  motion_tracking.rs  multicam.rs  node.rs  renderer.rs  scene.rs  speed_ramping.rs  streaming.rs  time.rs  transitions.rs  utils.rs
studio/: package.json
studio/src/: index.html  main.js
tests/: test_basic.py
