[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "fluxreel"
version = "0.1.0"
description = "FluxReel - Code Less. Render Faster."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Mehmet T. AKALIN", email = "makalin@dv.com.tr" }
]
keywords = ["video", "rendering", "animation", "ffmpeg"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Rust",
]

[project.urls]
Homepage = "https://github.com/makalin/FluxReel"
Documentation = "https://github.com/makalin/FluxReel#readme"
Repository = "https://github.com/makalin/FluxReel"

[tool.maturin]
features = ["pyo3"]
module-name = "fluxreel_core"

