[package]
name = "fluxreel-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "fluxreel"
path = "src/main.rs"

[dependencies]
fluxreel-core = { path = "../fluxreel-core" }
clap = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }

